@@ -7,6 +7,7 @@
 	Chop an always-FALSE parameter and delete an unused return value.
 	* src/prompt.c (do_prompt): Remove a superfluous free.
 	* src/prompt.c (update_the_bar): Bundle some statements.
+	* src/prompt.c (need_statusbar_update): Elide this function.
 
 2016-01-22  Benno Schulenberg  <bensberg@justemail.net>
 	* src/utils.c (get_homedir): Don't use $HOME when we're root, because
